fix alignement

--- a/app/assets/stylesheets/components/_two_columns.scss
+++ b/app/assets/stylesheets/components/_two_columns.scss
@@ -59,7 +59,7 @@
 .two-columns-description {
   flex: 1;
   padding: 70px;
-
+  padding-left: 0;
   @media (max-width: $screen-sm) {
     flex: inherit;
   }
